--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 body{
 	/*background: #0074D9;*/
 	background: #001F3F;  
-	background-image: url(../images/sun.png);
+	/*background-image: url(../images/sun.png);*/
 	background-repeat: no-repeat;
 	background-size: 100%;
 	opacity: 0.8;
